show extended controller
